--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </section>
 
         <section class="mb-24">
-            <h2 class="section-title">The Engine Room: How Funds are Priced</h2>
+            <h2 class="section-title">How Funds are Priced</h2>
             <p class="section-subtitle">
                 Unlike a stock, whose price changes every second, a mutual fund's price is calculated only once per day after the market closes. This price is called the Net Asset Value (NAV).
             </p>
