--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             </p>
             <div class="card">
                 <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">The Daily NAV Calculation</h3>
+                <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">(Total Value of All Investments - Fund's Liabilities) ÷ Total Number of Shares = Price per Share (NAV)</h3>
                 <div class="flex flex-col md:flex-row items-center justify-around gap-4 text-center font-semibold text-slate-700">
                     <div class="p-4 rounded-lg bg-slate-50 w-full md:w-auto">
                         <p class="text-4xl">🏢</p>
