--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 Unlike a stock, whose price changes every second, a mutual fund's price is calculated only once per day after the market closes. This price is called the Net Asset Value (NAV).
             </p>
             <div class="card">
-                <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">The Daily NAV Calculation</h3>
+                <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">NAV Calculation</h3>
                 <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">(Total Value of All Investments - Fund's Liabilities) ÷ Total Number of Shares</h3>
                 <h3 class="text-2xl font-bold text-center text-slate-800 mb-8">= Price Per Share (NAV)</h3>
                 <div class="flex flex-col md:flex-row items-center justify-around gap-4 text-center font-semibold text-slate-700">
